Improved: through refactoring, better naming of listeners, accumulators, and their factory. Fixed: robot-vs-nav.txt example exp.